# bulgarian-app

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .prettierignore  CLAUDE.md  Dockerfile  Justfile  README.md  benchmark_results.json  docker-compose.dev.yml  docker-compose.yml  mado.toml  pyproject.toml  pyrightconfig.json  test_progressive_audio.html
.githooks/: pre-commit  pre-push
.github/linters/: .markdownlint.yml  .prettierrc.json  .ruff.toml  .taplo.toml  .yamllint.yml  biome.json  biome.sdk.json  pyrightconfig.json  tsconfig.json
.github/workflows/: api-lint.yml  docker.yml  lint.yml  super-lint.yml  test.yml
.zed/: settings.json
client/: .gitignore  audio-worklet.js  biome.json  dark-mode.js  enhanced-corrections.js  grammar-chips.js  index.html  inline-drills.js  interactive-drills.js  main.js  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js  vitest.config.js
client/assets/fonts/: README.md
client/components/: MiniLessonModal.js  MiniLessonTrigger.js
client/playwright-report/: index.html
client/services/: L1LanguageService.js  LocalProgressService.js  MiniLessonService.js  PerformanceMonitor.js  ProgressiveAudioPlayer.js  PronunciationVisualizerService.js  TranscriptDisplay.js
client/src/sdk/: index.ts
client/src/sdk/core/: OpenAPI.ts  request.ts
client/src/sdk/models/: AnalyzeTextRequest.ts  AnalyzeTextResponse.ts  AppConfigResponse.ts  DrillSuggestion.ts  ErrorResponse.ts  GrammarCorrection.ts  HealthCheckItem.ts  HealthCheckResponse.ts  PhonemeScore.ts  PracticeWordsRequest.ts  PracticeWordsResponse.ts  PronunciationAnalysis.ts  PronunciationRequest.ts  TTSProfilesResponse.ts  UpdateL1Request.ts  UpdateL1Response.ts  UserProgress.ts  VisualFeedback.ts  WordScore.ts
client/src/sdk/services/: ConfigService.ts  ContentService.ts  HealthService.ts  PronunciationService.ts  TtsService.ts
client/styles/: l1-languages.css  pronunciation.css
client/tests/: BulgarianVoiceCoach.test.js  LocalProgressService.test.js  PronunciationVisualizerService.test.js  audio-level.test.js  audio-playback.test.js  audio-worklet.test.js  dark-mode.test.js  enhanced-corrections.test.js  error-highlighting.test.js  grammar-chips.test.js  inline-drills.test.js  integration.test.js  interactive-drills.test.js  setup.js  warmup-drills.test.js
client/tests/e2e/: app.spec.js  performance.spec.js
content/: bg_grammar_pack.json  bg_scenarios_with_grammar.json
docs/: DATA_STRUCTURES.md  DEPLOYMENT.md  DONE.md  ENVIRONMENT.md  PERFORMANCE_OPTIMIZATION.md  TODO.md  bg_gpt5_plan.md  justfile_recipes.md  my_tech_stack.md
docs/api/: .spectral.yaml  README.md  openapi.json
docs/api/examples/: README.md  typescript-sdk.ts  websocket-asr.js
docs/benchmarks/: whisper_model_comparison.md  whisper_model_comparison_summary.json
docs/research/: TTS_RESEARCH.md
scripts/: README.md  benchmark_performance.py  benchmark_whisper_models.py  capture-new-screenshots.js  capture-screenshots.js  capture_workflow_screenshots.js  generate_test_audio.py  simple_screenshots.js  test-docker.sh  test_vad_timings.py  verify-setup.py
server/: app.py  asr.py  bg_normalization.py  bg_rules.py  config.py  conftest.py  database.py  llm.py  pronunciation_scorer.py  requirements.txt  telemetry.py  test_app.py  test_asr.py  test_bg_normalization.py  test_bg_rules.py  test_config.py  test_content.py  test_database.py  test_integration.py  test_llm.py  test_progress_integration.py  test_pronunciation_scorer.py  test_tts.py  test_websocket.py  tts.py
server/content/: __init__.py  bg_grammar_pack.json  bg_mini_lessons.json  bg_scenarios.json  bg_scenarios_with_grammar.json
